@@ -523,6 +523,7 @@ matrix(c("!", "hexmode",
          "months", "Date",
          "months", "POSIXt",
          "mtfrm", "default",
+         "nameOfClass", "default",
          "names", "POSIXlt",
          "names<-", "POSIXlt",
          "open", "connection",
