@@ -62,6 +62,26 @@ abc(e0[[1]])
 abc(e1[[1]])
 
 
+## Some tests for `nameOfClass()`, called from inherits()
+ClassX <- structure(list(), name = "ClassX",
+                    class = c("S3pp_class", "S3pp_object"))
+
+classx_instance <- structure(list(), class = c("ClassX", "S3pp_object"))
+
+nameOfClass.S3pp_class <- function(x) attr(x, "name", TRUE)
+nameOfClass.foo <- function(x) "bar"
+
+stopifnot(exprs = {
+    inherits(classx_instance, "ClassX")
+    inherits(classx_instance, ClassX)
+    ## ignore class on a character object
+    isTRUE(inherits(1, structure("numeric", class = "foo")))
+    ## make sure class is nor evaluated in calling nameOfClass
+    isFALSE(inherits(1, structure(quote(stop("should not be evaluated")),
+                                  class = "foo")))
+})
+
+
 ## Some tests for `@` dispatching
 ## make sure that
 ## - `@` evals the first args only once,
