@@ -188,6 +188,13 @@
       \item The \code{@} operator is now an S3 generic. Based on
       contributions by Tomasz Kalinowski in \PR{18482}.
 
+      \item \code{inherits(x, what)} now accepts values other than a
+      simple character vector for argument \code{what}. A new generic,
+      \code{nameOfClass()}, is called to resolve the class name from
+      \code{what}. This supports experimenting with alternative object
+      systems. Based on contributions by Tomasz Kalinowski in
+      \PR{18485}.
+
       \item Detection of BLAS/LAPACK in use (\code{sessionInfo()}) with
       FlexiBLAS now reports the current backend.
 
